content/boundary/v1.0.x/content/docs/commands/targets/update.mdx
---
layout: docs
page_title: targets update - Command
description: >-
  The "targets update" command updates an existing target resource.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-18T17:04:41-05:00
last_modified: 2025-12-10T14:31:06-05:00
# END AUTO GENERATED METADATA
---

# targets update

Command: `targets update`

The `targets update` command lets you update a target.

## Example

This example updates a TCP target with the ID `ttcp_1234567890` to add the name `devops` and the description `For DevOps usage`:

```shell-session
$ boundary targets update tcp -id ttcp_1234567890 -name devops -description "For DevOps usage"
```

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary targets update [type] [sub command] [options] [args]

Please see the typed subcommand help for detailed usage information.

Subcommands:
    rdp    Update an rdp-type target
    ssh    Update a ssh-type target
    tcp    Update a tcp-type target
```

</CodeBlockConfig>

### Command options

- `-description=<string>` - Specifies the optional description of the target that you want to use for identification purposes.
- `-name=<string>` - Specifies the optional name you want to use to describe the target for identification purposes.
- `-id=<string>` - Specifies the ID of the target to update.
- `-version=<int>` -  Specifies the version of the target to update. If you do not specify a version, the command automatically performs a check-and-set operation.

@include 'cmd-option-note.mdx'

### Usages by type

You can update RDP, SSH, or TCP targets.

<Tabs>
<Tab heading="RDP">

The `targets update rdp` command lets you update existing RDP targets.

#### Example

This example updates an RDP target with the id `rdp_1234567890` to add the name `devops` and the description `RDP target for DevOps`:

```shell-session
$ boundary targets update rdp -id trdp_1234567890 -name "devops" -description "RDP target for DevOps"
```

#### Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary targets update rdp [options] [args]
```

</CodeBlockConfig>

#### RDP target options

- `-address=<string>` - An optional valid network address for the target to connect to.
You cannot use an address alongside host sources.

  If you set a target address for RDP targets that use Kerberos authentication, use the target's hostname and append the domain to it, for example `target-hostname.mydomain.com`. For RDP targets that use NTLM authentication, set the target address to the target's IP address.
- `-default-client-port=<string>` - The default client port on the target.
- `-default-port=<string>` - The default port on the target.
For Client Agent versions prior to 0.21.2, you must configure a custom port to use transparent sessions with RDP targets.

  Refer to [RDP targets](/boundary/docs/targets/configuration/configure-transparent-sessions#rdp-targets) for more information about configuring a custom port for transparent sessions.
- `-egress-worker-filter=<string>` - A Boolean expression that filters which egress workers can process sessions for the target.
- `-ingress-worker-filter=<string>` - A Boolean expression that filters which ingress workers can process sessions for the target.
- `-session-connection-limit=<string>` - The maximum number of connections allowed for a session.
A value of `-1` means the connections are unlimited.

  The Windows Remote Desktop Connection application consumes multiple connections when initiating a session.
  If you set the `session-connection-limit` to `1` for RDP targets it will cause all RDP connections using this client to fail.
  You can leave the connection limit unset or configure a limit of `2` or higher to account for the multiple connections used by the RDP client.

  Refer to [RDP target attributes](/boundary/docs/domain-model/targets#rdp-target-attributes) for more information.
- `-session-max-seconds=<string>` - The maximum lifetime of the session, including all connections.
You can specify an integer number of seconds or a duration string.
If you do not specify a maximum duration, Boundary uses the default value of 8 hours (28800 seconds).
- `-with-alias-authorize-session-host-id=<string>` - The host ID that an alias uses to authorize sessions for the target.
- `-with-alias-scope-id=<string>` - The scope ID that you want to create the target and alias in.
The default is `global`.
You can create aliases in the `global` and project scopes.

  You must create org and project suffixes before you can create an alias in the target's project scope. Otherwise, you can only create the alias in the `global` scope. Refer to [Create a suffix for a scope](/boundary/docs/targets/configuration/create-suffix) for more information.
- `-with-alias-value=<string>` - The value of the alias that you want to use to represent the target.
Use this parameter to create the alias and target, and associate them with each other, at the same time.


</Tab>
<Tab heading="SSH">

The `targets update ssh` command lets you update SSH targets.

#### Example

This example updates an SSH target with the ID `tssh_1234567890` to add the name `devops` and the description `SSH target for DevOps`:

```shell-session
$ boundary targets update ssh -id tssh_1234567890 -name "devops" -description "SSH target for DevOps"
```

#### Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary targets update ssh [options] [args]
```

</CodeBlockConfig>

#### SSH target options

- `-address=<string>` - An optional valid network address for the target to connect to.
You cannot use an address alongside host sources.
- `-default-client-port=<string>` - The default client port on the target, if set.
- `-default-port=<string>` - The default port on the target, if set.
If you do not specify a default port, Boundary uses port 22.
- `-egress-worker-filter=<string>` - A Boolean expression that filters which egress workers can process sessions for the target.
- `-enable-session-recording=<string>` - A Boolean expression you can use to enable session recording for the target.
- `-ingress-worker-filter=<string>` - A Boolean expression that filters which ingress workers can process sessions for the target.
- `-session-connection-limit=<string>` - The maximum number of connections allowed for a session.
A value of `-1` means the connections are unlimited.
- `-session-max-seconds=<string>` - The maximum lifetime of the session, including all connections.
You can specify an integer number of seconds or a duration string.
If you do not specify a maximum duration, Boundary uses the default value of 8 hours (28800 seconds).
- `-storage-bucket-id=<string>` - The public ID of the storage bucket you want to associate with the target.


</Tab>
<Tab heading="TCP">

The `targets update tcp` command lets you update TCP targets.

#### Example

This example updates a TCP target with the ID `ttcp_1234567890` to add the name `devops` and the description `TCP target for DevOps`:

```shell-session
$ boundary targets update tcp -id ttcp_1234567890 -name "devops" -description "TCP target for DevOps"
```

#### Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary targets update tcp [options] [args]
```

</CodeBlockConfig>

#### TCP target options

- `-address=<string>` - An optional valid network address for the target to connect to.
You cannot use an address alongside host sources.
- `-default-client-port=<string>` - The default client port on the target, if set.
- `-default-port=<string>` - The default port on the target, if set.
If you do not specify a default port, Boundary uses port 22.
- `-egress-worker-filter=<string>` - A Boolean expression that filters which egress workers can process sessions for the target.
- `-ingress-worker-filter=<string>` - A Boolean expression that filters which ingress workers can process sessions for the target.
- `-session-connection-limit=<string>` - The maximum number of connections allowed for a session.
A value of `-1` means the connections are unlimited.
- `-session-max-seconds=<string>` - The maximum lifetime of the session, including all connections.
You can specify an integer number of seconds or a duration string.
If you do not specify a maximum duration, Boundary uses the default value of 8 hours (28800 seconds).
- `-worker-filter=<string>` - This option is deprecated.
Use the egress or ingress filters instead.

</Tab>
</Tabs>
